--- a/McDonalds.Rmd
+++ b/McDonalds.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "McDonalds OR"
-author: "Mauricio Moreno"
+author: "Mariia, Ai, Mauricio"
 date: "2023-03-28"
 output: html_document
 ---
