--- a/McDonalds.Rmd
+++ b/McDonalds.Rmd
@@ -38,23 +38,35 @@ df$Item <- gsub("\\(Medium\\)", "", df$Item)
 
 df <- left_join(df, price, by = "Item")
 
-df %>%
-  filter(is.na(Price))
+df$Price <- gsub("\\$", "", df$Price)
 
-df <- df %>%
-  mutate (Price = case_when(
-    Item == "McFlurry with Reese's Peanut Butter Cups" ~ "$4.29",
-    Item == "McFlurry with Oreo Cookies" ~ "$4.29",
-    Item == "McFlurry with M&M’s Candies" ~ "$4.29",
-    Item == "Shamrock Shake" ~ "$3.69",
-    Item == "Chocolate Shake" ~ "$3.69",
-    Item == "Strawberry Shake" ~ "$3.69",
-    Item == "	Vanilla Shake" ~ "$3.69",
-    TRUE                                               ~ Price
-    )
-  )
+df$Price <- ifelse(grepl("McFlurry", df$Item), 4.29, df$Price)
+df$Price <- ifelse(grepl("Shake|Smoothie", df$Item), 3.69, df$Price)
+df$Price <- ifelse(grepl("Mocha", df$Item), 3.49, df$Price)
+df$Price <- ifelse(grepl("Latte|Minute", df$Item), 3.29, df$Price)
+df$Price <- ifelse(grepl("Tea|Milk|Dasani", df$Item), 1.49, df$Price)
+df$Price <- ifelse(grepl("Sprite|Dr|Coke|Cola", df$Item), 1.79, df$Price)
+df$Price <- ifelse(grepl("Iced", df$Item) & grepl("Coffee", df$Item), 2.69, df$Price)
+df$Price <- ifelse(grepl("Hot Chocolate", df$Item), 2.79, df$Price)
+df$Price <- ifelse(grepl("Sundae", df$Item), 3.49, df$Price)
+df$Price <- ifelse(grepl("Frappé", df$Item), 3.99, df$Price)
+df$Price <- ifelse(grepl("Cookie", df$Item), 1.99, df$Price)
+df$Price <- ifelse(grepl("Southwest", df$Item) & grepl("Salad", df$Item), 
+                   5.51, df$Price)
+df$Price <- ifelse(grepl("Bacon", df$Item) & grepl("Salad", df$Item), 
+                   5.28, df$Price)
 
+df$Price[c(2:3, 5:6, 16, 18, 37:42, 49:51, 53, 71)] <- c(5.19, 6.19, 5.69, 7.09, 
+                                                         4.79, 5.59, 1.89, 2.50, 
+                                                         5.16, 6.89, 12.39, 4.89, 
+                                                         3.59, 1.99, 0.89, 1.59, 
+                                                         1.99)
 
-#df %>% select(Item,Price)
+#drop NAs
+df <- df[complete.cases(df$Price),]
+
+#drop apple juice
+df <- df[-43,]
+
 ```
 
